# yolov8_od_postprocess

./: CMakeLists.txt  LICENSE  README.md  compile.sh  main.cpp  onnx_run.py  requirements.txt  run.sh
yolov8_post/: yolov8_post.cpp  yolov8_post.h
